@@ -507,9 +507,13 @@ void JSGlobalObject::mark()
     JSVariableObject::mark();
 
     ExecStateStack::const_iterator end = d()->activeExecStates.end();
-    for (ExecStateStack::const_iterator it = d()->activeExecStates.begin(); it != end; ++it)
-        (*it)->m_scopeChain.mark();
-        
+    for (ExecStateStack::const_iterator it = d()->activeExecStates.begin(); it != end; ++it) {
+        ExecState* exec = *it;
+        exec->m_scopeChain.mark();
+        if (ScopeNode* scopeNode = exec->scopeNode())
+            scopeNode->mark();
+    }
+
     Collector::markStackObjectsConservatively(registers().data(), &registers().last());
         
     markIfNeeded(d()->globalExec.exception());
